Style: adding cart logo in "add to cart" button fix: text container and button width change to 50% next step : adding a marge or a gap between logo and text.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    outline: 1px solid black;
+    /* outline: 1px solid black; */
 }
 p {
     font-size: 14px;
